--- a/clox/CMakeLists.txt
+++ b/clox/CMakeLists.txt
@@ -6,5 +6,7 @@ project(
   VERSION 0.1.0
 )
 
-add_executable(lox src/main.c)
+add_executable(lox)
+aux_source_directory(./src source)
+target_sources(lox PUBLIC ${source})
 target_include_directories(lox PUBLIC ./include)
